<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#CC000000"
        android:padding="10dp" >

        <TextView
            android:id="@+id/currentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Current_Date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentDate"
            android:layout_centerHorizontal="true"
            android:text="@string/Current_Location"
            android:textColor="#FFF" />

        <ImageView
            android:id="@+id/refreshMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imageContent_refresh"
            android:src="@drawable/btn_action_refresh_idle" />

        <ImageView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_list_idle" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/submenu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_above="@+id/mainMenuBar"
        />

    <RelativeLayout
        android:id="@+id/mainMenuBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/btn_nav_panel_tier1" 
        >

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal" 
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".1" />

            <LinearLayout
                android:id="@+id/a1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/seismometer_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/imageContent_seismometers"
                    android:src="@drawable/icon_nav1_seismometers_idle" />

                <TextView
                    android:id="@+id/seismometer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imageContent_seismometers"
                    android:textColor="#5D6468" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/maplayer_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/imageContent_mapLayers"
                    android:src="@drawable/icon_nav1_maplayers_idle" />

                <TextView
                    android:id="@+id/maylayer_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imageContent_mapLayers"
                    android:textColor="#5D6468" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/infoImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/imageContent_info"
                    android:src="@drawable/icon_nav1_info_idle" />

                <TextView
                    android:id="@+id/infoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/imageContent_info"
                    android:textColor="#5D6468" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight=".1" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/whiteArrowUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainMenuBar"
        android:layout_centerHorizontal="true"
        android:src="@drawable/white_arrow_up" />

</RelativeLayout>